Fixed text alignment in reset filter button.

--- a/webroot/css/_datatables.scss
+++ b/webroot/css/_datatables.scss
@@ -28,7 +28,7 @@
     color: colours.$ui-01;
     height: 3em;
     width: 12em;
-    padding-right: 4em;
+    padding: 1em 4em 1em 1em;
     margin-right: 0.5em;
     position: absolute;
     left: calc(100vw - 37.5em );
