--- a/webroot/css/lsa-carbon.css
+++ b/webroot/css/lsa-carbon.css
@@ -159,7 +159,7 @@ body {
   color: #F4F4F4;
   height: 3em;
   width: 12em;
-  padding-right: 4em;
+  padding: 1em 4em 1em 1em;
   margin-right: 0.5em;
   position: absolute;
   left: calc(100vw - 37.5em );
